# FormaDock

./: .gitignore  Cargo.toml  README.md  config.ini  frence.ini  test_out.txt  test_url.rs
src/: app.rs  main.rs  model.rs  ui.rs  win_icon.rs
