[package]
name = "forma-dock"
version = "0.1.0"
edition = "2021"
description = "Zones transparentes sur le bureau : nom du dossier et icônes de son contenu"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"
ini = "1.3.0"
open = "5.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
] }
tray-icon = "0.21.3"
muda = "0.17.1"